# site2

./: .env.example  .gitignore  .replit  Dockerfile  Procfile  README.md  admin.py  auth.py  build.sh  config.py  create_sample_products.py  create_test_product.py  database.py  dependencies.py  deploy_guide.md  email_utils.py  fovdark.db  infinite_pay.py  infinite_pay_simple.py  license.py  main.py  main_simple.py  migration_supabase.sql  models.py  package-lock.json  package.json  password_recovery.py  payment.py  pyproject.toml  render.yaml  requirements.txt  security.py  stripe_integration.py  stripe_product_sync.py  stripe_simple.py  supabase_schema.sql  utils.py
attached_assets/: Pasted--WARNING-This-schema-is-for-context-only-and-is-not-meant-to-be-run-Table-order-and-constrai-1749157904717.txt  Pasted-Crie-um-sistema-web-completo-de-vendas-de-licen-as-digitais-com-as-seguintes-funcionalidades-nome--1749141157480.txt  Pasted-Crie-um-sistema-web-completo-de-vendas-de-licen-as-digitais-com-as-seguintes-funcionalidades-nome--1749141299840_1749141299840.txt
static/: admin.js
static/css/: main.css  style.css
static/js/: admin.js  script.js
templates/: admin.html  admin_new.html  base.html  categories.html  contact.html  downloads.html  error.html  faq.html  index.html  login.html  painel.html  payment_cancel.html  payment_pending.html  payment_success.html  privacy.html  product.html  product_detail.html  products.html  profile.html  register.html  status.html  support.html  terms.html
