[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.1",
    "bcrypt>=4.3.0",
    "bleach>=6.2.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sendgrid>=6.12.3",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "user-agents>=2.2.0",
    "uvicorn>=0.34.3",
    "werkzeug>=3.1.3",
]
